<resources>
    <string name="app_name">Mobile-HARD_MAD_Lab1</string>
    <string name="silent">Silent</string>
    <string name="moon">Moon</string>
    <string name="slogan">We are what we do</string>
    <string name="silent_moon_description">Thousand of people are using silent moon for smalls meditation</string>
    <string name="has_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE&#160;&#160;&#160;&#160;</string>
    <string name="or_log_in_with_email">OR LOG IN WITH EMAIL</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_your_account">Create your account</string>
    <string name="or_sign_up_with_email">OR SIGN UP WITH EMAIL</string>
    <string name="afsar">Afsar</string>
    <string name="email_example">imshuvo97@gmail.com</string>
    <string name="password_example">passwordd</string>
    <string name="i_have_read">I HAVE READ THE</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="get_started">GET STARTED</string>
    <string name="greeting">Hi Asfar, Welcome</string>
    <string name="to_silent_moon">to Silent Moon</string>
    <string name="explore_app">Explore the app, Find some peace of mind to prepare for meditation.</string>
    <string name="what_brings_you">What brings you</string>
    <string name="to_silent_moon_question">to Silent Moon?</string>
    <string name="choose_topic">choose a topic to focuse on:</string>
    <string name="reduce_stress">Reduce Stress</string>
    <string name="reminders_question">What time would you\nlike to meditate?</string>
    <string name="recommend_time">Any time you can choose but We\nrecommend first thing in the morning.</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="twenty_seven">27</string>
    <string name="twenty_eight">28</string>
    <string name="twenty_nine">29</string>
    <string name="thirty">30</string>
    <string name="thirty_one">31</string>
    <string name="thirty_two">32</string>
    <string name="thirty_three">33</string>
    <string name="day_question">Which day would you\nlike to meditate?</string>
    <string name="day_recommend">Everyday is the best but we recommend picking at least five.</string>
    <string name="sunday">SU</string>
    <string name="saturday">S</string>
    <string name="friday">F</string>
    <string name="thursday">TH</string>
    <string name="wednesday">W</string>
    <string name="tuesday">T</string>
    <string name="monday">M</string>
    <string name="save">SAVE</string>
    <string name="no_thanks">NO THANKS</string>
    <string name="good_morning">Good Morning, Afsar</string>
    <string name="have_a_good_day">We Wish you have a good day</string>
    <string name="basics">Basics</string>
    <string name="course">COURSE</string>
    <string name="start">START</string>
    <string name="duration">3–10 MIN</string>
    <string name="relaxation">Relaxation</string>
    <string name="music">MUSIC</string>
    <string name="daily_thought">Daily Thought</string>
    <string name="meditation">MEDITATION</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="focus">Focus</string>
    <string name="home">Home</string>
    <string name="sleep">Sleep</string>
    <string name="meditate">Meditate</string>
    <string name="music_nav_bar">Music</string>
    <string name="afsar_capital">Afsar</string>
    <string name="happy_morning">Happy Morning</string>
    <string name="ease_the_mind">Ease the mind into a restful night\'s sleep with these deep, ambient tones.</string>
    <string name="favorits_count">24.232 Favorits</string>
    <string name="listenings_count">34.234 Listenings</string>
    <string name="pick_a_narrator">Pick a Narrator</string>
    <string name="male_voice">MALE VOICE</string>
    <string name="female_voice">FEMALE VOICE</string>
    <string name="focus_attention">Focus Attention</string>
    <string name="audio_duration_example">10 MIN</string>
    <string name="we_can_recognize">we can learn how to recognize when our minds are doing their normal everyday acrobatics.</string>
    <string name="all">All</string>
    <string name="daily_calm">Daily Calm</string>
    <string name="apr">APR 30</string>
    <string name="pause_practice">PAUSE PRACTICE</string>
    <string name="days_of_calm">7 Days of Calm</string>
    <string name="audio_start">01:30</string>
    <string name="audio_end_time">45:00</string>
    <string name="days_of_calm_uppercase">7 DAYS OF CALM</string>
    <string name="welcome_to_sleep">Welcome to Sleep</string>
    <string name="explore_sleep">Explore the new king of sleep. It uses sound and visualization to create perfect conditions for refreshing sleep.</string>
    <string name="sleep_stories">Sleep Stories</string>
    <string name="soothing_bedtime">Soothing bedtime stories to help you fall into a deep and natural sleep</string>
    <string name="the_ocean_moon">The Ocean Moon</string>
    <string name="non_stop_mixes">Non-stop 8- hour mixes of our most popular sleep audio</string>
    <string name="story_duration">45 MIN</string>
    <string name="sleep_music">SLEEP MUSIC</string>
    <string name="night_island">Night Island</string>
    <string name="night_island_duration">45 MIN</string>
    <string name="related">RELATED</string>
    <string name="play">PLAY</string>
    <string name="sleep_music_lowercase">Sleep Music</string>
</resources>