<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeScreen.HomeFragment">

    <!-- Логотип Silen Moon -->
    <TextView
        android:id="@+id/silentTextView"
        style="@style/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="10dp"
        android:text="@string/silent"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintEnd_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moonTextView"
        style="@style/logo_text"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/moon"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView" />

    <!--Good morning-->
    <TextView
        android:id="@+id/textView31"
        style="@style/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="44dp"
        android:text="@string/good_morning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <TextView
        style="@style/gray_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/have_a_good_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31" />

</androidx.constraintlayout.widget.ConstraintLayout>