<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SignInSignUpFragment">

    <!--Фон экрана-->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/sign_in_sign_up_bg"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Логотип Silen Moon -->
    <TextView
        android:id="@+id/silentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="10dp"
        android:fontFamily="@font/airbnb_cereal_bold"
        android:letterSpacing="0.24"
        android:text="@string/silent"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintEnd_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/moonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:fontFamily="@font/airbnb_cereal_bold"
        android:letterSpacing="0.24"
        android:text="@string/moon"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView" />

    <!-- Изображение -->
    <ImageView
        android:id="@+id/introduceImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:contentDescription="@null"
        android:src="@drawable/introduce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <!-- Описание приложения -->
    <TextView
        android:id="@+id/sloganTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/introduceImageView" />

    <TextView
        android:id="@+id/silentMoonDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="52dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="6sp"
        android:text="@string/silent_moon_description"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sloganTextView" />

    <!-- Регистрация -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/helvetica_neue_medium"
        android:text="@string/sign_up"
        style="@style/Widget.Material3.Button"

        android:textSize="14sp"
        app:cornerRadius="38dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Авторизация -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/haveAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:letterSpacing="0.05"
            android:text="@string/has_account"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/logInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"

            android:clickable="true"
            android:letterSpacing="0.05"
            android:text="@string/log_in"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/haveAccountTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>