<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".welcomeScreen.WelcomeFragment">

    <!--Фон экрана-->
    <ImageView
        android:layout_width="492dp"
        android:layout_height="515dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="-120dp"
        android:contentDescription="@null"
        android:src="@drawable/welcome_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/welcome_hill"
        app:layout_constraintBottom_toTopOf="@id/hillBaseConstraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/hillBaseConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="-100dp"
        android:background="@color/hill_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:layout_width="220dp"
        android:layout_height="248dp"
        android:src="@drawable/meditation"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@null"
        android:layout_marginBottom="-28dp"/>

    <!--Логотип Silent Moon-->
    <TextView
        android:id="@+id/silentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="10dp"
        android:text="@string/silent"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintEnd_toStartOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView"
        style="@style/logo_text"/>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:src="@drawable/welcome_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/moonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:text="@string/moon"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/logoImageView"
        app:layout_constraintStart_toEndOf="@+id/logoImageView"
        app:layout_constraintTop_toTopOf="@+id/logoImageView"
        style="@style/logo_text" />

    <!--Приветствие-->
    <TextView
        android:id="@+id/textView4"
        style="@style/roboto_bold_gold_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/greeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <TextView
        android:id="@+id/textView5"
        style="@style/roboto_bold_gold_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/to_silent_moon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <!--Описание-->
    <TextView
        style="@style/roboto_lightgray_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/explore_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <!--Кнопка Get started-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        style="@style/gray_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>