<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SignUpFragment">

    <!--Фон экрана-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/sign_up_bg"
        app:layout_constraintBottom_toBottomOf="@+id/continue_method"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Create your account-->
            <TextView
                android:id="@+id/createAccountTextView"
                style="@style/roboto_bold_black_28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_your_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Кнопки продолжения авторизации через Facebook или Google-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/continue_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAccountTextView" />

            <!--Or sign up with email-->
            <TextView
                android:id="@+id/textView2"
                style="@style/roboto_gray_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/or_sign_up_with_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/continue_method" />

            <!--Поле ввода имени пользователя-->
            <EditText
                android:id="@+id/email_input"
                style="@style/filled_input_text"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/afsar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:contentDescription="@null"
                android:src="@drawable/check"
                app:layout_constraintBottom_toBottomOf="@+id/email_input"
                app:layout_constraintEnd_toEndOf="@+id/email_input"
                app:layout_constraintTop_toTopOf="@+id/email_input" />

            <!--Поле ввода email пользователя-->
            <EditText
                android:id="@+id/editText2"
                style="@style/filled_input_text"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/email_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_input" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:contentDescription="@null"
                android:src="@drawable/check"
                app:layout_constraintBottom_toBottomOf="@+id/editText2"
                app:layout_constraintEnd_toEndOf="@+id/editText2"
                app:layout_constraintTop_toTopOf="@+id/editText2" />

            <!--Поле ввода пароля-->
            <EditText
                android:id="@+id/editText3"
                style="@style/filled_input_text"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:inputType="textPassword"
                android:text="@string/password_example"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:contentDescription="@null"
                android:src="@drawable/closed_eye"
                app:layout_constraintBottom_toBottomOf="@+id/editText3"
                app:layout_constraintEnd_toEndOf="@+id/editText3"
                app:layout_constraintTop_toTopOf="@+id/editText3" />

            <!--Политика конфидециальности-->
            <androidx.constraintlayout.helper.widget.Flow
                android:id="@+id/flow10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:constraint_referenced_ids="privacyPolicy,checkBox,textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <TextView
                android:id="@+id/privacyPolicy"
                style="@style/roboto_blue_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/privacy_policy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/flow10"
                app:layout_constraintStart_toEndOf="@+id/privacyPolicy"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <TextView
                android:id="@+id/textView3"
                style="@style/roboto_gray_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_have_read"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/flow10"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        style="@style/accent_blue_button"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
